--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-      <a class="navbar-brand brandmarg" href="#"><img src="/img/logosmall.svg" style="width: 35px; height: 35px;"><img src="/img/nameheader.png" style="width: 60px; height: 15px; margin-left: 10px; margin-top: 10px;"> </a>
+      <a class="navbar-brand brandmarg" href="#"><img src="./img/logosmall.svg" style="width: 35px; height: 35px;"><img src="./img/nameheader.png" style="width: 60px; height: 15px; margin-left: 10px; margin-top: 10px;"> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,18 +42,18 @@
     to bottom,
     rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.7)),
-     url('/img/backgroundimg.png');
+     url('./img/backgroundimg.png');
     height: 720px;
   "
 >
   <div class="d-flex justify-content-center align-items-center h-90">
     <div class="maintext">
-      <img class="mainlogoimg mb-3" src="/img/logomain.svg"></br>
-      <img class="mainlogotitle mb-3" src="/img/nameheader.png">
+      <img class="mainlogoimg mb-3" src="./img/logomain.svg"></br>
+      <img class="mainlogotitle mb-3" src="./img/nameheader.png">
       <h4 style="max-width: 525px;font-size: 32px; font-weight: 400;">We're here to help you find a new home.</h4>
     </div>
   </div>
-    <img style="max-width: 64px; padding-bottom:30px;" src="/img/arrow1.png">
+    <img style="max-width: 64px; padding-bottom:30px;" src="./img/arrow1.png">
     </div>
 </header>
 <section class="container">
@@ -81,8 +81,8 @@
 </section>
   <footer class="text-center text-lg-start border border-white pt-4 footercolor">
     <div class="d-flex justify-content-center align-items-center mb-3 footerlogomrg">
-      <img src="/img/logofooter.png">
-      <img style="margin-left: 10px; margin-top: 20px;" src="/img/namefooter.png">
+      <img src="./img/logofooter.png">
+      <img style="margin-left: 10px; margin-top: 20px;" src="./img/namefooter.png">
     </div>
   <div class="container p-4">
     <div class="row">
@@ -168,10 +168,10 @@
       <p class="Copyright-margin">© Estate, LLC. All rights reserved. Powered by Webflow.</p>
       <ul class="list-unstyled d-flex icons-margin">
         
-        <li class="ms-3"><a class="link-dark" href="#"><img src="/img/linkedinicon.png" alt=""></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><img src="/img/fbicon.png" alt=""></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><img src="/img/insticon.png" alt=""></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><img src="/img/twittericon.png" alt=""></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><img src="./img/linkedinicon.png" alt=""></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><img src="./img/fbicon.png" alt=""></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><img src="./img/insticon.png" alt=""></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><img src="./img/twittericon.png" alt=""></a></li>
       </ul>
     </div>
   </footer>
