--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-      <a class="navbar-brand brandmarg" href="#"><img src="./img/logosmall.svg" style="width: 35px; height: 35px;"><img src="./img/nameheader.png" style="width: 60px; height: 15px; margin-left: 10px; margin-top: 10px;"> </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand brandmarg" href="#">
+        <img src="./img/logosmall.svg" style="width: 35px; height: 35px;">
+        <img src="./img/nameheader.png" style="width: 60px; height: 15px; margin-left: 10px; margin-top: 10px;">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse ender navmarg" id="navbarSupportedContent">
@@ -36,15 +40,8 @@
   </nav>
   <header>
   <div
-  class="p-5 text-center bg-image"
-  style="
-    background-image: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0.7),
-    rgba(255, 255, 255, 0.7)),
-     url('./img/backgroundimg.png');
-    height: 720px;
-  "
+  class="p-5 text-center bg-image headerbgimg"
+
 >
   <div class="d-flex justify-content-center align-items-center h-90">
     <div class="maintext">
