--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
     </div>
   </nav>
   <header>
-  <div
-  class="p-5 text-center bg-image headerbgimg"
-
->
+  <div class="p-5 text-center bg-image" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('./img/backgroundimg.png'); height: 720px;">
   <div class="d-flex justify-content-center align-items-center h-90">
     <div class="maintext">
       <img class="mainlogoimg mb-3" src="./img/logomain.svg"></br>
