--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sign up</a>
+            <a class="nav-link" href="./form.html">Sign up</a>
           </li>
         </ul>
       </div>
